muchisimos cambios - nuevo proyecto, venta de ropa sustentable

--- a/Programación-Web-I/tp/HTML/aboutsus.html
+++ b/Programación-Web-I/tp/HTML/aboutsus.html
@@ -30,6 +30,11 @@
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, similique cumque ullam veniam dolorem harum exercitationem! Omnis optio corporis magni quod deleniti deserunt perspiciatis corrupti, sapiente quibusdam accusantium voluptas dignissimos?
                 </div>
             </section>
+            <section class="about-us">
+                <h2>Sobre nosotros</h2>
+                <p>Tu Marca Sustentable nació de la pasión por la moda y el compromiso con el medio ambiente. Confeccionamos nuestras prendas utilizando materiales orgánicos y reciclados, y nos aseguramos de que nuestros procesos de producción sean respetuosos con el entorno y con las personas que trabajan con nosotros.</p>
+                <p>Creemos firmemente que la moda y la sostenibilidad pueden ir de la mano, y nos esforzamos por ofrecer a nuestras clientas piezas de alta calidad que no solo las hagan sentir y lucir bien, sino que también contribuyan a un mundo más verde y justo para todos.</p>
+              </section>
         </main>
     
         <footer>
